fix: anchor tag word wrap

--- a/src/pages/ContentPage/ContentPage.module.scss
+++ b/src/pages/ContentPage/ContentPage.module.scss
@@ -48,6 +48,7 @@
   a {
     text-decoration: underline;
     font-weight: bold;
+    word-wrap: break-word;
   }
 
   code {
